# Gerenciador-de-Rotina

./: README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
document/dbScripts/: db_create.sql
src/: __init__.py  config.py  extentions.py  models.py
src/blueprints/home/: __init__.py  routes.py
src/blueprints/task/: __init__.py  routes.py
src/blueprints/user/: __init__.py  routes.py
src/static/css/: root.css
src/static/css/home/: home.css
src/static/css/user/: dashboard.css
src/static/js/user/: dashboard.js
src/templates/: base.html
src/templates/errors/: 404.html
src/templates/home/: home.html
src/templates/task/: edit.html  register.html
src/templates/user/: dashboard.html  login.html  register.html  update.html
tests/: conftest.py  test_integration.py  test_models.py  test_routes.py
