[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-de-rotinas"
version = "2.1.0"
description = "Um sistema web em Flask para gerenciamento de rotinas e execuções."
authors = [
    { name = "João Pedro de Melo Naves", email = "joao.naves@sempreceub.com" },
    { name = "Vítor Camago", email = "vitor.co@sempreceub.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["src"]